benifit to sell your products and services section added to trinity training tab

--- a/index.html
+++ b/index.html
@@ -606,9 +606,8 @@ We can help you with all your Trinity Balaji-related problems. Our Trinity Balaj
                 </div>
             </div>
         </section>
-
-
-        <section class="about-low-area section-padding40">
+<!-- 
+ <section class="about-low-area section-padding40">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-xs-12 col-lg-12 col-md-10">
@@ -677,15 +676,11 @@ We can help you with all your Trinity Balaji-related problems. Our Trinity Balaj
                             <div class="about-right-img">
                                 <img src="assets/img/trinity/Pic7.png" alt="">
                             </div>
-                            <!--  <div class="img-cap">
-                            <span>20</span>
-                            <p>Years of experience</p>
-                        </div> -->
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
+        </section>  -->
 
         <section class="about-low-area section-padding40">
             <div class="container">
