--- a/trinity-training.html
+++ b/trinity-training.html
@@ -61,7 +61,7 @@
 <body>
     <div id="loader"></div>
     <div id="header"></div>
-    <main>
+    <main class="fit-contents-sm">
 
 
         <section class="about-low-area section-padding40 mb-50">
@@ -179,7 +179,7 @@
                 <div class="row">
                     <div class="col-xl-5 col-lg-5 col-md-8 offset-md-1 offset-sm-1">
 
-                        <div>
+                        <div class="text-center">
                             <img src="assets/img/trinity/Pic23.png" alt="">
                         </div>
 
@@ -233,10 +233,6 @@
                             <div class="about-right-img">
                                 <img src="assets/img/trinity/Pic24.png" alt="">
                             </div>
-                            <!-- <div class="img-cap">c
-                                    <span>20</span>
-                                    <p>Years of experience</p>
-                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -251,23 +247,23 @@
                     <h1 class="text-center display-4 font-weight-bold mb-30 font-30">Why Learn About Government
                         e-Marketplace?</h1>
                 </div>
-                <div class="row">
+                <div class="row justify-content-center">
 
                     <div class="col-md-4">
                         <h1 class="text-center font-weight-bold font-22">Manufacturers (OEM)</h1>
 
-                        <div class="postItem">
+                        <div class="postItem text-center">
                             <img src="assets/img/trinity/Pic25.png" alt="">
                         </div>
                     </div>
                     <div class="col-md-4">
                         <h1 class="text-center font-weight-bold font-22">Traders (Resellers)</h1>
-                        <div class="postItem"> <img src="assets/img/trinity/Pic26.png" alt="">
+                        <div class="postItem text-center"> <img src="assets/img/trinity/Pic26.png" alt="">
                         </div>
                     </div>
                     <div class="col-md-4">
                         <h1 class="text-center font-weight-bold font-22">Service Providers</h1>
-                        <div class="postItem">
+                        <div class="postItem text-center">
                             <img src="assets/img/trinity/Pic27.png" alt="">
                         </div>
                     </div>
@@ -690,6 +686,8 @@
                     </div>
                 </div>
                 <div class="row">
+                    <p>We are a gem portal consultant and we provide services to register in Government E Marketplace also our team will guide you with the correct details about handing the portal. We have helped many of our clients to register their businesses in the GeM portal through Trinity Balaji consultant. We have a dedicated team to help with all the procedures and provide you with best service quality. THe team members are always ready to help with any of the slightest requirement occured during the process of buying or selling. 
+                        We are not only providing services but also enhance your business styles by providing you with different types of training for hadling the portal. There might some confusion regarding any of the tab or forms to be filled by you, but our team will handle all those queries and provide you with hassle free experience.</p>
                     <div class="col text-center">
                         <button type="button" class="orange-btn">Call Us Now <i class="fas fa-play-circle"></i></button>
                     </div>
@@ -697,7 +695,51 @@
             </div>
             </div>
         </section>
+        <section class="about-low-area section-padding40">
+            <div class="container">
 
+                <div class="row justify-content-center">
+                    <div class="col-xs-12 col-lg-12 col-md-10">
+                        <div class="section-title mb-35">
+                            <h1 class="text-center">
+                                Benefits to sell your products or services directly through GeM
+
+                            </h1>
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-xs-12 col-lg-12 col-md-10">
+                        <div class="section-title mb-35">
+                            <h2 class="text-center">
+                                Special provisions and sections for startups, MSMEs and Emporium products.
+                            </h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="row align-items-center">
+                    <div class="col-xl-12 col-lg-12 col-md-10">
+                        <div class="display-7">
+                            <ul>
+                                <li>    • Fully online, paperless and contactless platform. There is no need now sign or fill up any physical forms, which was very tedious due to submission of many documents.</li>
+                                <li>    • Seller friendly dashboard for monitoring supplies & payments.
+                                </li>
+                                <li>    • User friendly appication has been launched so as to facilitate the buyers as well as the sellers. The portal itself has been revamped for easy understanding and guidance for the sellers have been updated time and again for their future references.
+                                </li>
+                                <li>  • There is a simple way to gain access for the bids and after the result of the bid requirement, it becomes way simpler for the buyers and the sellers for co-ordinating with each other. </li>
+                                <li>  • If there are any grievances faced by anyone there is a quick redressal mechanism which provides quick and easy resolution to follow.as fa-play fa-xs"></i> Direct and easy access to all government
+                                    departments</li>
+                                <li>  • If any deadlines have not been met, there will be quick intimations send and no more tension of any missed services.</li>
+                                <li>  • The portal is user friendly, anyone can bid for their services and products without any middlemen or agent.</li>
+                                <li> • Appropriate payment system is been handled in a very corrective way so that the seller has no problem in following up things.</li>
+                            </ul>
+                        </div>
+
+                    </div>
+
+                </div>
+            </div>
+        </section>
         <section>
             <div class="container">
                 <h1 class="text-center font-weight-bold display-3 pt-5 font-35 darkbluecolor">What We Have Done Till
