changed the contents of index tab

--- a/index.html
+++ b/index.html
@@ -1173,7 +1173,7 @@ There is a possibility for Trinity Balaji registration as a startup on Trinity B
 
 
 
-        <section class="about-low-area section-padding40">
+        <!-- <section class="about-low-area section-padding40">
             <div class="container">
 
                 <div class="row justify-content-center">
@@ -1211,6 +1211,51 @@ There is a possibility for Trinity Balaji registration as a startup on Trinity B
                                 <li><i class="fas fa-play fa-xs"></i> A comprehensive and easy-to-use dashboard for
                                     selling and monitoring your supplies as well as payments</li>
 
+                            </ul>
+                        </div>
+
+                    </div>
+
+                </div>
+            </div>
+        </section> -->
+        <section class="about-low-area section-padding40">
+            <div class="container">
+
+                <div class="row justify-content-center">
+                    <div class="col-xs-12 col-lg-12 col-md-10">
+                        <div class="section-title mb-35">
+                            <h1 class="text-center">
+                                Benefits to sell your products or services directly through GeM
+
+                            </h1>
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-xs-12 col-lg-12 col-md-10">
+                        <div class="section-title mb-35">
+                            <h2 class="text-center">
+                                Special provisions and sections for startups, MSMEs and Emporium products.
+                            </h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="row align-items-center">
+                    <div class="col-xl-12 col-lg-12 col-md-10">
+                        <div class="display-7">
+                            <ul>
+                                <li>    • Fully online, paperless and contactless platform. There is no need now sign or fill up any physical forms, which was very tedious due to submission of many documents.</li>
+                                <li>    • Seller friendly dashboard for monitoring supplies & payments.
+                                </li>
+                                <li>    • User friendly appication has been launched so as to facilitate the buyers as well as the sellers. The portal itself has been revamped for easy understanding and guidance for the sellers have been updated time and again for their future references.
+                                </li>
+                                <li>  • There is a simple way to gain access for the bids and after the result of the bid requirement, it becomes way simpler for the buyers and the sellers for co-ordinating with each other. </li>
+                                <li>  • If there are any grievances faced by anyone there is a quick redressal mechanism which provides quick and easy resolution to follow.as fa-play fa-xs"></i> Direct and easy access to all government
+                                    departments</li>
+                                <li>  • If any deadlines have not been met, there will be quick intimations send and no more tension of any missed services.</li>
+                                <li>  • The portal is user friendly, anyone can bid for their services and products without any middlemen or agent.</li>
+                                <li> • Appropriate payment system is been handled in a very corrective way so that the seller has no problem in following up things.</li>
                             </ul>
                         </div>
 
@@ -1530,7 +1575,7 @@ There is a possibility for Trinity Balaji registration as a startup on Trinity B
             </div>
         </section>
 
-        <section>
+      <!--   <section>
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-xs-12 col-lg-12 col-md-10">
@@ -1543,12 +1588,7 @@ There is a possibility for Trinity Balaji registration as a startup on Trinity B
                 </div>
                 <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-indicators">
-                        <!--    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-                    aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                    aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                    aria-label="Slide 3"></button> -->
+                       
                     </div>
                     <div class="carousel-inner">
 
@@ -1563,16 +1603,11 @@ There is a possibility for Trinity Balaji registration as a startup on Trinity B
                             </div>
 
                         </div>
-                        <!-- <div class="carousel-item">
-                <img src="assets/img/trinity/certificate.jpg" class="d-block w-100" alt="" width="50%" height="auto">
-              </div>
-              <div class="carousel-item">
-                <img src="assets/img/trinity/certificate.jpg" class="d-block w-100" alt="" width="50%" height="auto">
-              </div> -->
+                        
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <section class="about-low-area section-padding40 mt-20">
             <div class="container">
