--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,9 @@
     <link rel="stylesheet" href="assets/css/slick.css">
     <link rel="stylesheet" href="assets/css/nice-select.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
+    <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
  
@@ -33,14 +36,16 @@
             
 
         });
+        $(function() {
+          AOS.init();
+     });
     </script>
 </head>
-<div id="header"></div>
+<body>
 <main>
+    <div id="header"></div>
 
-    
-    <section class="about-low-area section-padding40"   style="background-color: #f27b48;
-    ">
+    <section class="p-lg-10" style="background-color: #f27b48;">
         <div class="container">
             <div class="row">
                 <div class="col-xl-6 col-lg-6 col-md-10 pl-30 align-self-center">
@@ -64,7 +69,7 @@
                     <i class="fab fa-instagram iconWrapper-blue"></i>
                 </div>
                 </div>
-                <div class="col-xl-5 col-lg-6 col-md-9 offset-md-1 offset-sm-1">
+                <div class="col-xl-5 col-lg-6 col-md-9 offset-md-1 offset-sm-1 align-self-center">
                     <div class="about-right-cap">
                         <div class="about-right-img text-center">
                             <img src="assets/img/trinity/Pic38.png" alt="">
