--- a/header.html
+++ b/header.html
@@ -1,10 +1,14 @@
+<script>
+   $( '#nav1 .navbar-nav a' ).on('click',
+                    function () {
+            $( '#nav1 .navbar-nav' ).find( 'li.active' )
+            .removeClass( 'active' );
+            $( this ).parent( 'li' ).addClass( 'active' );
+        });
+</script>
 <!-- Preloader Start -->
 <header>
 <!-- Header Start -->
-<div class="header-area"> 
-  <div class="main-header ">
-      <div class="header-top d-lg-block">
-          <div class="container">
               <div class="row align-items-center">
                 <div class="col-xs-5 col-lg-5"></div>
               <div class="col-xl-2 col-lg-2">
@@ -18,10 +22,7 @@
                       </div>
             </div>     
               </div>
-          </div>
-      </div>
-      <div class="header-bottom header-sticky">
-          <div class="container">
+          
               <div class="row ">
                   <div class="col-xl-12 col-lg-12 col-md-12">
                       <div class="menu-wrapper ">
@@ -31,11 +32,7 @@
                       </div>
                   </div>
               </div>
-          </div>
-      </div>
-  </div>
-</div>
-<nav class="navbar navbar-expand-lg navbar-light bg-light navbar-fixed-top" style="padding: 50px;">
+<nav id="nav1" class="navbar navbar-expand-lg navbar-light bg-light">
  
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
