--- a/our-packages.html
+++ b/our-packages.html
@@ -33,10 +33,16 @@
     <link rel="stylesheet" href="assets/css/slick.css">
     <link rel="stylesheet" href="assets/css/nice-select.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
+    <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
 <script>
+      $(function() {
+          AOS.init();
+     });
      $(function () {
         $('#loader').load("loader.html");
         $('#header').load("header.html");
@@ -59,7 +65,7 @@
 
                 <div class="row justify-content-center">
                     <div class="col-xs-12 col-lg-12 col-md-10">
-                        <div class="section-title mb-35">
+                        <div class="section-title mb-35" data-aos="flip-down" data-aos-duration="2000">
                             <h1 class="text-center">
                                 Explore Our Packages Here...
                             </h1>
@@ -72,7 +78,7 @@
 
                             <div class="row">
                                 <div class="col-md-6">
-                                    <div class="card ">
+                                    <div class="card" data-aos="flip-right" data-aos-duration="2000">
                                         <ul class="list-group">
                                             <li
                                                 class="list-group-item card-custom-xs-2 display-4">
@@ -92,7 +98,7 @@
 
                                 </div>
                                 <div class="col-md-6">
-                                    <div class="card ">
+                                    <div class="card" data-aos="flip-left" data-aos-duration="2000">
                                         <ul class="list-group">
                                             <li
                                                 class="list-group-item card-custom-blue display-4">
@@ -131,15 +137,15 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-xs-12 col-lg-12 col-md-10">
-                        <div class="section-title mb-35">
-                            <h1 class="text-center font-15" data-animation="fadeInRight" data-delay="3s">
+                        <div class="section-title mb-35" data-aos="flip-down" data-aos-duration="2000">
+                            <h1 class="text-center font-15">
                                 Original Equipments Manufacturer Pack (OEM Pack)
                             </h1>
                         </div>
                     </div>
                 </div>
                 <div class="row align-items-center">
-                    <div class="col-xl-5 col-lg-6 col-md-10">
+                    <div class="col-xl-5 col-lg-6 col-md-10"  data-aos="flip-right" data-aos-duration="2000">
                         <div class="card border-0">
                             <div class="card-body">
                                 <h2 class="card-title font-15"><i class="fas fa-star"></i>
@@ -187,7 +193,7 @@
 
                            
                     </div>
-                    <div class="col-xl-6 col-lg-6 col-md-9 offset-md-1 offset-sm-1">
+                    <div class="col-xl-6 col-lg-6 col-md-9 offset-md-1 offset-sm-1"  data-aos="flip-left" data-aos-duration="2000">
                         <div class="about-right-cap">
                             <div class="card ">
                                 <ul class="list-group card-darkblue">
@@ -223,7 +229,7 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-xs-12 col-lg-12 col-md-10">
-                        <div class="section-title mb-25">
+                        <div class="section-title mb-25"  data-aos="fade-right" data-aos-duration="2000">
                             <h2>
                                 Important Points
                             </h2>
@@ -232,7 +238,7 @@
                 </div>
                 <div class="row align-items-center">
                     <div class="col-xl-12 col-lg-12 col-md-10">
-                        <div class="custom-indent">
+                        <div class="custom-indent"  data-aos="fade-in" data-aos-duration="2000">
                             <ul>
                                 <li><i class="fas fa-check bluetextcolor custom-indent-li"></i> All the payments will be made in advance.</li>
                                 <li><i class="fas fa-check bluetextcolor custom-indent-li"></i> We do not claim the time of work completion it may vary.</li>
