header fixed, animation removed, horizontal scroll bar bug fixed, websites some of text were disappeared-- this issue solved

--- a/header.html
+++ b/header.html
@@ -53,7 +53,7 @@
             <a class="nav-link" href="index.html">Required Documents</a>
           </li>
           <li class="nav-item px-4">
-            <a class="nav-link" href="trinity-training.html">Trinity Training</a>
+            <a class="nav-link" href="trinity-train.html">Trinity Training</a>
           </li>
           <li class="nav-item px-4">
             <a class="nav-link" href="our-clients.html">Our Clients</a>
