--- a/our-clients.html
+++ b/our-clients.html
@@ -26,8 +26,8 @@
     <link rel="stylesheet" href="assets/css/nice-select.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
-    <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
-
+<!--     <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
+ -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
@@ -93,13 +93,13 @@ for (var i = 0; i < titlearray.length; i++) {
                             <div class="row justify-content-center">
                                 <div class="col-xs-12 col-lg-12 col-md-10">
                                     <div>
-                                        <p class="display-01 b font-35"  data-aos="fade-left" data-aos-duration="2000">
+                                        <p class="display-01 b font-35">
                                             Our Clients
                                         </p>
                                     </div>
                                 </div>
                             </div>
-                            <p  data-aos="fade-in" data-aos-duration="2000">
+                            <p>
                                 A few of our clients.
                             </p>
                         </div>
