--- a/our-packages.html
+++ b/our-packages.html
@@ -65,7 +65,7 @@
 
                 <div class="row justify-content-center">
                     <div class="col-xs-12 col-lg-12 col-md-10">
-                        <div class="section-title mb-35" data-aos="flip-down" data-aos-duration="2000">
+                        <div class="section-title mb-35">
                             <h1 class="text-center">
                                 Explore Our Packages Here...
                             </h1>
@@ -78,7 +78,7 @@
 
                             <div class="row">
                                 <div class="col-md-6">
-                                    <div class="card" data-aos="flip-right" data-aos-duration="2000">
+                                    <div class="card">
                                         <ul class="list-group">
                                             <li
                                                 class="list-group-item card-custom-xs-2 display-4">
@@ -98,7 +98,7 @@
 
                                 </div>
                                 <div class="col-md-6">
-                                    <div class="card" data-aos="flip-left" data-aos-duration="2000">
+                                    <div class="card">
                                         <ul class="list-group">
                                             <li
                                                 class="list-group-item card-custom-blue display-4">
@@ -137,7 +137,7 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-xs-12 col-lg-12 col-md-10">
-                        <div class="section-title mb-35" data-aos="flip-down" data-aos-duration="2000">
+                        <div class="section-title mb-35">
                             <h1 class="text-center font-15">
                                 Original Equipments Manufacturer Pack (OEM Pack)
                             </h1>
@@ -145,7 +145,7 @@
                     </div>
                 </div>
                 <div class="row align-items-center">
-                    <div class="col-xl-5 col-lg-6 col-md-10"  data-aos="flip-right" data-aos-duration="2000">
+                    <div class="col-xl-5 col-lg-6 col-md-10">
                         <div class="card border-0">
                             <div class="card-body">
                                 <h2 class="card-title font-15"><i class="fas fa-star"></i>
@@ -193,7 +193,7 @@
 
                            
                     </div>
-                    <div class="col-xl-6 col-lg-6 col-md-9 offset-md-1 offset-sm-1"  data-aos="flip-left" data-aos-duration="2000">
+                    <div class="col-xl-6 col-lg-6 col-md-9 offset-md-1 offset-sm-1">
                         <div class="about-right-cap">
                             <div class="card ">
                                 <ul class="list-group card-darkblue">
@@ -229,7 +229,7 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-xs-12 col-lg-12 col-md-10">
-                        <div class="section-title mb-25"  data-aos="fade-right" data-aos-duration="2000">
+                        <div class="section-title mb-25">
                             <h2>
                                 Important Points
                             </h2>
@@ -238,7 +238,7 @@
                 </div>
                 <div class="row align-items-center">
                     <div class="col-xl-12 col-lg-12 col-md-10">
-                        <div class="custom-indent"  data-aos="fade-in" data-aos-duration="2000">
+                        <div class="custom-indent">
                             <ul>
                                 <li><i class="fas fa-check bluetextcolor custom-indent-li"></i> All the payments will be made in advance.</li>
                                 <li><i class="fas fa-check bluetextcolor custom-indent-li"></i> We do not claim the time of work completion it may vary.</li>
