--- a/contact.html
+++ b/contact.html
@@ -34,9 +34,9 @@
             $('#footer').load("footer.html");
             $('#loader').load("loader.html");
         });
-        $(function() {
+      /*   $(function() {
   AOS.init();
-});
+}); */
     </script>
 </head>
 <body>
@@ -195,7 +195,7 @@
             <u>
         <div class="row p-2">
 
-            <div class="col-md-4 text-center">
+            <div class="col-md-4 text-center text-center-sm">
                 <a href="terms.html" class="black-text">TERMS & CONDITIONS</a>
             </div>
             <div class="col-md-4 offset-md-1 text-left">
@@ -207,7 +207,7 @@
         </div>
         <div class="row align-items-right p-2">
 
-            <div class="col-md-4 offset-md-2 text-center border-2">
+            <div class="col-md-4 offset-md-2 text-center text-center-sm border-2">
                 <a href="feedback.html" class="black-text">FEEDBACK FORM</a>
             </div>
             <div class="col-md-4 ">
